fix: restore dark mode planet positions and background images

--- a/style.css
+++ b/style.css
@@ -79,6 +79,18 @@ body:not(.light-mode) .planet {
 }
 .light-mode .planet { display: none; }
 
+/* 다크 모드 전용 행성/별 배치 복구 */
+.p-1 { width: 450px; height: 450px; top: -100px; right: -150px; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5523.jpg'); transform: rotate(15deg); }
+.p-2 { width: 400px; height: 400px; bottom: -50px; left: -100px; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5524.jpg'); transform: rotate(-10deg); }
+.p-3 { width: 350px; height: 350px; top: 35%; right: -50px; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5540.jpg'); opacity: 0.7; }
+.p-4 { width: 300px; height: 300px; top: 15%; left: 5%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5541.jpg'); opacity: 0.8; }
+.p-5 { width: 320px; height: 320px; bottom: 15%; right: 10%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5542.jpg'); opacity: 0.7; }
+
+.p-star-1 { width: 150px; height: 150px; top: 5%; left: 45%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5543.jpg'); }
+.p-star-2 { width: 130px; height: 130px; bottom: 30%; left: 15%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5544.jpg'); }
+.p-star-3 { width: 110px; height: 110px; top: 65%; left: 5%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5543.jpg'); transform: scaleX(-1); }
+.p-star-4 { width: 140px; height: 140px; top: 25%; right: 25%; background-image: url('https://temporary-tomato-l6zfd6pmld.edgeone.app/IMG_5544.jpg'); opacity: 0.6; }
+
 /* 라이트 모드 행성 설정 */
 .light-planet {
     display: none;
